<resources>
    <string name="app_name">Ace Books</string>
    <string name="error_data_message">Error Loading data from Google Books API</string>
    <string name="text_title">Text Title</string>
    <string name="search">Search</string>
    <string name="no_search_data">Please insert valid search terms</string>

    <string name="description">image of book cover</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_author">Insert Author(s)</string>
    <string name="hint_title">Insert Title</string>
    <string name="hint_ISBN">Insert ISBN</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="changed_status">Please check your internet connection</string>
</resources>
