<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_activity"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_title" />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_activity"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_author" />

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_activity"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_publisher" />

    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_activity"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_ISBN" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_activity"
        android:layout_gravity="center"
        android:background="@drawable/search_button_shape"
        android:textSize="@dimen/search_button_text_size"
        android:textColor="@android:color/white"
        android:text="@string/search" />
</LinearLayout>